# wataiil_damo

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  fixture.json  pyproject.toml  requirements.txt
ab_comment/: wagtail_hooks.py
blog/: blocks.py  model_article.py  model_news.py  models.py  wagtail_hooks.py
blog/migrations/: 0007_auto_20210726_0641.py  0008_auto_20210728_0403.py  0009_auto_20210729_0242.py  0010_alter_postpage_search_image.py  0011_auto_20210801_0804.py  0012_auto_20210804_0630.py  0013_auto_20210804_0641.py  0014_auto_20210804_0705.py  0015_auto_20210804_1016.py  0016_blogllistarticlepage.py  0017_alter_blogarticlepage_body.py  0018_auto_20210805_0706.py
docs/: struct news.md
fork/: wagtail  wagtailmeta  wagtailsharing
frontend/: package-lock.json
frontend/builds/css/: app.css  app.css.map
frontend/builds/js/: app.js  app.js.map  vendors.js  vendors.js.LICENSE.txt  vendors.js.map
home/: models.py  urls.py  view.py
home/migrations/: 0003_annotate.py  0004_annotate_id_messege.py  0005_customimage_customrendition.py
wagtail_bootstrap_blog/: urls.py  wsgi.py
wagtail_bootstrap_blog/settings/: base.py  dev.py  production.py
wagtail_bootstrap_blog/static/css/: test_static.css
wagtail_bootstrap_blog/templates/: base.html
wagtail_bootstrap_blog/templates/blog/: base_list_article.html  blog_article.html  blog_list_article.html  blog_news.html  blog_news_page.html  (+1 more)
wagtail_review/: forms.py  models.py  wagtail_hooks.py
wagtail_review/migrations/: 0001_initial.py
wagtail_review/migrations_2/: 0001_initial.py
(+17 files in other folders)
